# overkill-budget-app

./: .gitignore  Cargo.toml
rust-backend/: Cargo.toml  budget.db
rust-backend/sql/: schema.sql
rust-backend/src/: AppError.rs  budget.db  db.rs  main.rs  models.rs  record_repository.rs  service.rs  types.rs
rust-backend/src/controllers/: mod.rs  records.rs  records_controller.rs
rust-backend/src/models/: financial_record.rs  frequency.rs  mod.rs  record.rs  record_type.rs
rust-backend/src/sql/: schema.sql
src/: db.rs  main.rs  models.rs
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-htmx-frontend/tauri-app/src/: index.html
tauri-htmx-frontend/tauri-app/src-tauri/: Cargo.toml
