[package]
name = "budget_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


rusqlite = { version = "0.36", features = ["bundled"] }
uuid = { version = "1.17", features = ["v4"] }

directories = "5.0"
