[package]
name = "budget_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.36", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
directories = "5.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = "1.6.0"
axum-macros = "0.5.0"
